RESOLVED FIXED128653
JIT should be enabled (regression from addition of JIT enabled setting)
https://bugs.webkit.org/show_bug.cgi?id=128653
Summary JIT should be enabled (regression from addition of JIT enabled setting)
Filip Pizlo
Reported 2014-02-11 22:10:22 PST
JIT should be enabled (regression from addition of JIT enabled setting)
Attachments
Patch (1.56 KB, patch)
2014-02-11 22:10 PST, Filip Pizlo
thorton: review+
Filip Pizlo
Comment 1 2014-02-11 22:10:38 PST
Filip Pizlo
Comment 2 2014-02-11 22:36:12 PST
Note You need to log in before you can comment on or make changes to this bug.