JIT should be enabled (regression from addition of JIT enabled setting) https://bugs.webkit.org/show_bug.cgi?id=128653

Reviewed by Tim Horton.

* UIProcess/mac/WebContextMac.mm:
(WebKit::registerUserDefaultsIfNeeded):



Canonical link: https://commits.webkit.org/146695@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163950 268f45cc-cd09-0410-ab3c-d52691b4dbfc